Proof of concept

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,10 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:teensylc]
-platform = teensy
+platform = teensy-ds4
 board = teensylc
 framework = arduino
+build_flags = -DUSB_DS4 -DUSB_DS4_AUTH_RELAY -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
 lib_deps =
     USB-Host-Shield-20
+    SPI4Teensy3
