Tidy up patches

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,10 @@
 platform = teensy-ds4
 board = teensylc
 framework = arduino
-build_flags = -DUSB_DS4 -DUSB_DS4_AUTH_RELAY -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
+build_flags = -DUSB_DS4 -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
 lib_deps =
     USB-Host-Shield-20
-    SPI4Teensy3
+    MD_Menu
+    git+https://github.com/dogtopus/SoftPotMagic.git
+    ResponsiveAnalogRead
+upload_protocol = teensy-cli
