Very vague and incomplete Japanese menu translation.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = teensy-ds4
 board = teensylc
 framework = arduino
-build_flags = -DUSB_DS4 -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1 -DUSB_DS4_TURBO=1
+build_flags = -DUSB_DS4 -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1 -DUSB_DS4_TURBO=1 -DSERVICE_MENU_LANG=LANG_JA
 lib_deps =
     USB-Host-Shield-20
     MD_Menu
