Move to external CRC32 library

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,4 +18,5 @@ lib_deps =
     MD_Menu
     git+https://github.com/dogtopus/SoftPotMagic.git
     ResponsiveAnalogRead
+    CRC32
 upload_protocol = teensy-cli
