Start porting to RDS4Reboot

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,12 @@
 platform = teensy-ds4
 board = teensylc
 framework = arduino
-build_flags = -DUSB_DS4 -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1 -DUSB_DS4_TURBO=1
+build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
 lib_deps =
     USB-Host-Shield-20
     MD_Menu
     git+https://github.com/dogtopus/SoftPotMagic.git
     ResponsiveAnalogRead
     CRC32
+    git+https://github.com/dogtopus/RDS4Reboot.git
 upload_protocol = teensy-cli
