--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,18 @@ lib_deps =
     CRC32
     git+https://github.com/dogtopus/RDS4Reboot.git
 upload_protocol = teensy-cli
+
+[env:teensy36]
+platform = teensy-ds4
+board = teensy36
+framework = arduino
+build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DCORE_TEENSY -D_ARM_ -DUSB_HOST_SERIAL=Serial1
+lib_deps =
+    spi4teensy3
+    USB-Host-Shield-20
+    MD_Menu
+    git+https://github.com/dogtopus/SoftPotMagic.git
+    ResponsiveAnalogRead
+    CRC32
+    git+https://github.com/dogtopus/RDS4Reboot.git
+upload_protocol = teensy-cli
