--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = teensy-ds4
 board = teensylc
 framework = arduino
-build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DCORE_TEENSY -D_ARM_ -DUSB_HOST_SERIAL=Serial1
+build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
 lib_deps =
     USB-Host-Shield-20
     MD_Menu
@@ -26,7 +26,7 @@ upload_protocol = teensy-cli
 platform = teensy-ds4
 board = teensy36
 framework = arduino
-build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DCORE_TEENSY -D_ARM_ -DUSB_HOST_SERIAL=Serial1
+build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
 lib_deps =
     spi4teensy3
     USB-Host-Shield-20
