Switch to LiquidCrystalNew for more stable performance on LCD refreshes

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,12 @@ lib_deps =
     ResponsiveAnalogRead
     CRC32
     git+https://github.com/dogtopus/RDS4Reboot.git
+    ; Use my own fork now until sumotoy/LiquidCrystalNewV2#9 got merged
+    git+https://github.com/dogtopus/LiquidCrystalNewV2.git
+    ; not used but needed to build LiquidCrystalNewV2
+    gpio_expander
+    git+https://github.com/nox771/i2c_t3.git
+    Wire
 upload_protocol = teensy-cli
 
 [env:teensy36]
@@ -35,4 +41,10 @@ lib_deps =
     ResponsiveAnalogRead
     CRC32
     git+https://github.com/dogtopus/RDS4Reboot.git
+    ; Use my own fork now until sumotoy/LiquidCrystalNewV2#9 got merged
+    git+https://github.com/dogtopus/LiquidCrystalNewV2.git
+    ; not used but needed to build LiquidCrystalNewV2
+    gpio_expander
+    git+https://github.com/nox771/i2c_t3.git
+    Wire
 upload_protocol = teensy-cli
