Cleanup. Use the new manual configuration to satisfy Eclipse.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,12 @@
 platform = teensy-ds4
 board = teensylc
 framework = arduino
-build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
+build_flags =
+    -DUSB_DS4STUB
+    -UUSB_SERIAL
+    -DUSB_HOST_SERIAL=Serial1
+    -DRDS4_MANUAL_CONFIG
+    -DRDS4_AUTH_USBH
 lib_deps =
     USB-Host-Shield-20
     MD_Menu
@@ -32,7 +37,12 @@ upload_protocol = teensy-cli
 platform = teensy-ds4
 board = teensy36
 framework = arduino
-build_flags = -DUSB_DS4STUB -UUSB_SERIAL -DUSB_HOST_SERIAL=Serial1
+build_flags =
+    -DUSB_DS4STUB
+    -UUSB_SERIAL
+    -DUSB_HOST_SERIAL=Serial1
+    -DRDS4_MANUAL_CONFIG
+    -DRDS4_AUTH_USBH
 lib_deps =
     spi4teensy3
     USB-Host-Shield-20
