Add SPI dependency explicitly

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
     -DRDS4_MANUAL_CONFIG
     -DRDS4_AUTH_USBH
 lib_deps =
+    SPI
     USB-Host-Shield-20
     MD_Menu
     git+https://github.com/dogtopus/SoftPotMagic.git
@@ -42,7 +43,8 @@ build_flags =
     -DRDS4_MANUAL_CONFIG
     -DRDS4_AUTH_USBH
 lib_deps =
-    spi4teensy3
+    SPI
+    SPI4Teensy3
     USB-Host-Shield-20
     MD_Menu
     git+https://github.com/dogtopus/SoftPotMagic.git
