Set teensylc as default environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = teensylc
+
 [env:teensylc]
 platform = teensy-ds4
 board = teensylc
