--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ platform = teensy-ds4
 board = teensylc
 framework = arduino
 build_flags =
+    -DTEENSY_OPT_SMALLEST_CODE_LTO
     -DUSB_DS4STUB
     -DUSB_HOST_SERIAL=Serial1
     -DRDS4_MANUAL_CONFIG
