Adapt to SoftPotMagic update
Now the ResponsiveAnalogRead are polled inside the respAnalogRead(). The float-point dependency are no longer present as well.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ lib_deps =
     SPI
     USB-Host-Shield-20
     MD_Menu
-    git+https://github.com/dogtopus/SoftPotMagic.git
+    ;git+https://github.com/dogtopus/SoftPotMagic.git
     ResponsiveAnalogRead
     CRC32
     git+https://github.com/dogtopus/RDS4Reboot.git
