Temporarily switch to api-refactoring branch of RDS4Reboot for testing.

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ lib_deps =
     git+https://github.com/dogtopus/SoftPotMagic.git
     ResponsiveAnalogRead
     CRC32
-    git+https://github.com/dogtopus/RDS4Reboot.git
+    git+https://github.com/dogtopus/RDS4Reboot.git#api-refactoring
     ; Use my own fork now until sumotoy/LiquidCrystalNewV2#9 got merged
     git+https://github.com/dogtopus/LiquidCrystalNewV2.git
     ; not used but needed to build LiquidCrystalNewV2
