New "patch-free build flow": It werks (TM).

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 default_envs = teensylc
 
 [env:teensylc]
-platform = teensy-ds4
+platform = https://github.com/Project-Alpaca/platform-teensy.git#ds4
 board = teensylc
 framework = arduino
 build_flags =
@@ -35,10 +35,13 @@ lib_deps =
     gpio_expander
     git+https://github.com/nox771/i2c_t3.git
     Wire
+    ; Not in our minimum framework.
+    ; Will move to davetcc's ecosystem soon.
+    Encoder
 upload_protocol = teensy-cli
 
 [env:teensy36]
-platform = teensy-ds4
+platform = https://github.com/Project-Alpaca/platform-teensy.git#ds4
 board = teensy36
 framework = arduino
 build_flags =
@@ -61,4 +64,7 @@ lib_deps =
     gpio_expander
     git+https://github.com/nox771/i2c_t3.git
     Wire
+    ; Not in our minimum framework.
+    ; Will move to davetcc's ecosystem soon.
+    Encoder
 upload_protocol = teensy-cli
