Add IoAbstration and TaskManagerIO as dependency.

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,8 @@ lib_deps =
     ; Not in our minimum framework.
     ; Will move to davetcc's ecosystem soon.
     Encoder
+    davetcc/IoAbstraction
+    davetcc/TaskManagerIO
 upload_protocol = teensy-cli
 
 [env:teensy36]
@@ -67,4 +69,6 @@ lib_deps =
     ; Not in our minimum framework.
     ; Will move to davetcc's ecosystem soon.
     Encoder
+    davetcc/IoAbstraction
+    davetcc/TaskManagerIO
 upload_protocol = teensy-cli
